hphp/hack/test/typecheck/void_usage_placeholder_param.php.exp
File "void_usage_placeholder_param.php", line 10, characters 16-17:
Invalid argument (Typing[4110])
File "void_usage_placeholder_param.php", line 7, characters 25-26:
This is an object of type C2
File "void_usage_placeholder_param.php", line 10, characters 16-17:
It is incompatible with void ($_ is a placeholder variable not meant to be used)
